--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ buildscript {
         moshi_version = '1.13.0'
         retrofit_version = "2.9.0"
         moshi_converter_version = '2.9.0'
+        hilt_version = '2.38.1'
+        timber_version = '5.0.1'
+        okHttp_version = '4.9.0'
+        threetenabp_version = '1.2.4'
     }
 }
 
@@ -12,6 +16,7 @@ plugins {
     id 'com.android.application' version '7.2.0' apply false
     id 'com.android.library' version '7.2.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.google.dagger.hilt.android' version '2.41' apply false
 }
 
 task clean(type: Delete) {
