--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,11 @@ buildscript {
         timber_version = '5.0.1'
         okHttp_version = '4.9.0'
         threetenabp_version = '1.2.4'
+        androidXTestCoreVersion = '1.4.0'
+        robolectricVersion = '4.8'
+        mockwebserver_version = '4.9.0'
+        google_truth_version = '1.0'
+        mockito_version = '3.5.15'
     }
 }
 
