create caching models

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,9 @@ dependencies {
     // Utils
     implementation "com.jakewharton.threetenabp:threetenabp:$threetenabp_version"
 
+    // Caching
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
+    kapt "androidx.room:room-compiler:$room_version"
 }
