--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         mockwebserver_version = '4.9.0'
         google_truth_version = '1.0'
         mockito_version = '3.5.15'
+        room_version = '2.4.3'
     }
 }
 
