--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 
     testImplementation("com.squareup.okhttp3:mockwebserver:$mockwebserver_version")
     androidTestImplementation("com.squareup.okhttp3:mockwebserver:$mockwebserver_version")
+    androidTestImplementation "androidx.arch.core:core-testing:$androidx_core_testing_version"
 
     // AndroidX Test - JVM testing
     testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
