--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         google_truth_version = '1.0'
         mockito_version = '3.5.15'
         room_version = '2.4.3'
+        androidx_core_testing_version = '2.1.0'
     }
 }
 
