--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,10 +92,17 @@ dependencies {
     // Utils
     implementation "com.jakewharton.threetenabp:threetenabp:$threetenabp_version"
     implementation "com.jakewharton.timber:timber:$timber_version"
+    implementation 'com.intuit.ssp:ssp-android:1.1.0'
+    implementation 'com.intuit.sdp:sdp-android:1.1.0'
 
     // Caching
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
     kapt "androidx.room:room-compiler:$room_version"
+
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 }
