--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DemaStore"
+        android:name=".DemaStoreApp"
         tools:targetApi="31">
         <activity
             android:name=".common.MainActivity"
