--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         room_version = '2.4.3'
         androidx_core_testing_version = '2.1.0'
         nav_version = '2.5.1'
+        glide_version = '4.13.2'
     }
 }
 
